tests/build/fail/widget_new/missing_value4.stderr
error: expected property value
 --> $DIR/missing_value4.rs:6:16
  |
6 |         cursor =
  |                ^

warning: unused import: `cursor`
 --> $DIR/missing_value4.rs:1:27
  |
1 | use zero_ui::properties::{cursor, drag_move::draggable, margin};
  |                           ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
